# sorna-backend

./: .gitignore  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml  postCreateCommand.sh
alembic/: env.py
alembic/versions/: 04b480c07d12_new_revision.py  20d264072cf4_new_revision_4.py  2b1a3bb2e85a_new_revision_4.py  97fe93667938_new_revision_4.py  cc58b4b96eb4_new_revision.py
app/api/: routes.py
backend/: __main__.py  constants.py
backend/api/: __init__.py  app.py  router_manager.py  security.py  users.py
backend/api/routes/: __init__.py  auth.py  prompts.py  user_profile.py
backend/cli/: __init__.py
backend/cli/app/: __init__.py
backend/cli/database/: __init__.py  create.py  drop.py
backend/comedians/: __init__.py  base.py  chiquito_de_la_calzada.py  jose_mota.py  leo_harlem.py
backend/database/: functions.py
backend/database/enums/: comedians.py
backend/database/tables/: __init__.py  base.py  sessions.py  user_prompts.py  users.py
backend/extra/: jwt_utils.py  password_utils.py
backend/settings/: database.py  openai.py  web.py
documentation/: .$schema_DB.drawio.bkp  schema_DB.drawio
